# classic-cs-in-c

./: .gitignore  LICENSE  README.md
sorting-algorithms/: CMakeLists.txt  README.md
sorting-algorithms/data/: compiler-flag-comparison.md  report.jl  results-2021-06-07_0842.csv  results-2021-06-07_2021.csv  results-laptop-2021-06-07_1018.csv
sorting-algorithms/src/: insertion-sort.c  insertion-sort.h  main.c  sort-algorithms.c  sort-algorithms.h  test.c  test.h  utils.c  utils.h
